# transformer-from-scratch

./: README.md  pyproject.toml
docs/: MEMO.md
example/: main.py
transformer/: model.py
