[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "mahiro72",email = "mahiro.yoshie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
